--- a/index.html
+++ b/index.html
@@ -36,24 +36,24 @@
             <div class="tea">
 
             <div class="img">
-                <img src="/css/images/img-berryblitz.JPG" alt="Berry blitz tea">
+                <img src="/css/images/img-berryblitz.jpg" alt="Berry blitz tea">
                 <h4>Fall Berry Blitz Tea</h4>
             </div>
             
             <div class="img">
-                <img src="/css/images/img-spiced-rum.JPG" alt="Spice rum tea">
+                <img src="/css/images/img-spiced-rum.jpg" alt="Spice rum tea">
                 <h4>Spiced Rum Tea</h4>
             </div>
             <div class="img">
-                <img src="/css/images/img-donut.JPG" alt="Seasonal Donuts">
+                <img src="/css/images/img-donut.jpg" alt="Seasonal Donuts">
                 <h4>Seasonal Donuts</h4>
             </div>
             <div class="img">
-                <img src="css/images/img-myrtle-ave.JPG" alt="Myrtle Ave">
+                <img src="css/images/img-myrtle-ave.jpg" alt="Myrtle Ave">
                 <h4>Myrtle Ave</h4>
             </div>
             <div class="img">
-                <img src="/css/images/img-bedford-bizarre.JPG" alt="Bedford Bizarre">
+                <img src="/css/images/img-bedford-bizarre.jpg" alt="Bedford Bizarre">
                 <h4>Bedford Bizarre</h4>
             </div> 
         
