--- a/index.html
+++ b/index.html
@@ -36,24 +36,24 @@
             <div class="tea">
 
             <div class="img">
-                <img src="./css/images/img-berryblitz.JPEG" alt="Berry blitz tea">
+                <img src="../css/images/img-berryblitz.JPEG" alt="Berry blitz tea">
                 <h4>Fall Berry Blitz Tea</h4>
             </div>
             
             <div class="img">
-                <img src="./css/images/img-spiced-rum.JPEG" alt="Spice rum tea">
+                <img src="../css/images/img-spiced-rum.JPEG" alt="Spice rum tea">
                 <h4>Spiced Rum Tea</h4>
             </div>
             <div class="img">
-                <img src="./css/images/img-donut.JPEG" alt="Seasonal Donuts">
+                <img src="../css/images/img-donut.JPEG" alt="Seasonal Donuts">
                 <h4>Seasonal Donuts</h4>
             </div>
             <div class="img">
-                <img src=".css/images/img-myrtle-ave.JPEG" alt="Myrtle Ave">
+                <img src="../css/images/img-myrtle-ave.JPEG" alt="Myrtle Ave">
                 <h4>Myrtle Ave</h4>
             </div>
             <div class="img">
-                <img src="/css/images/img-bedford-bizarre.JPEG" alt="Bedford Bizarre">
+                <img src="../css/images/img-bedford-bizarre.JPEG" alt="Bedford Bizarre">
                 <h4>Bedford Bizarre</h4>
             </div> 
         
