--- a/index.html
+++ b/index.html
@@ -49,11 +49,11 @@
                 <h4>Seasonal Donuts</h4>
             </div>
             <div class="img">
-                <img src="../css/images/img-myrtle-ave.JPEG" alt="Myrtle Ave">
+                <img src="./css/images/img-myrtle-ave.JPEG" alt="Myrtle Ave">
                 <h4>Myrtle Ave</h4>
             </div>
             <div class="img">
-                <img src="../css/images/img-bedford-bizarre.JPEG" alt="Bedford Bizarre">
+                <img src="/css/images/img-bedford-bizarre.JPEG" alt="Bedford Bizarre">
                 <h4>Bedford Bizarre</h4>
             </div> 
         
