--- a/index.html
+++ b/index.html
@@ -41,15 +41,15 @@
             </div>
             
             <div class="img">
-                <img src="../css/images/img-spiced-rum.JPEG" alt="Spice rum tea">
+                <img src="/css/images/img-spiced-rum.JPEG" alt="Spice rum tea">
                 <h4>Spiced Rum Tea</h4>
             </div>
             <div class="img">
-                <img src="../css/images/img-donut.JPEG" alt="Seasonal Donuts">
+                <img src="/css/images/img-donut.JPEG" alt="Seasonal Donuts">
                 <h4>Seasonal Donuts</h4>
             </div>
             <div class="img">
-                <img src="./css/images/img-myrtle-ave.JPEG" alt="Myrtle Ave">
+                <img src="/css/images/img-myrtle-ave.JPEG" alt="Myrtle Ave">
                 <h4>Myrtle Ave</h4>
             </div>
             <div class="img">
