--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                 <h4>Spiced Rum Tea</h4>
             </div>
             <div class="img">
-                <img src="/css/images/img-donut.JPEG" alt="Seasonal Donuts">
+                <img src="../Tea-Cozy/css/images/img-donut.JPEG" alt="Seasonal Donuts">
                 <h4>Seasonal Donuts</h4>
             </div>
             <div class="img">
