--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             </div>
             
             <div class="img">
-                <img src="/css/images/img-spiced-rum.JPEG" alt="Spice rum tea">
+                <img src="../Tea-Cozy/css/images/img-spiced-rum.JPEG" alt="Spice rum tea">
                 <h4>Spiced Rum Tea</h4>
             </div>
             <div class="img">
@@ -49,11 +49,11 @@
                 <h4>Seasonal Donuts</h4>
             </div>
             <div class="img">
-                <img src="/css/images/img-myrtle-ave.JPEG" alt="Myrtle Ave">
+                <img src="../Tea-Cozy/css/images/img-myrtle-ave.JPEG" alt="Myrtle Ave">
                 <h4>Myrtle Ave</h4>
             </div>
             <div class="img">
-                <img src="/css/images/img-bedford-bizarre.JPEG" alt="Bedford Bizarre">
+                <img src="../Tea-Cozy/css/images/img-bedford-bizarre.JPEG" alt="Bedford Bizarre">
                 <h4>Bedford Bizarre</h4>
             </div> 
         
