--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <div class="tea">
 
             <div class="img">
-                <img src="Tea-Cozy/css/images/img-berryblitz.JPEG" alt="Berry blitz tea">
+                <img src="../Tea-Cozy/css/images/img-berryblitz.JPEG" alt="Berry blitz tea">
                 <h4>Fall Berry Blitz Tea</h4>
             </div>
             
